# Bachelor_thesis_z_filter

./: .gitignore  Cargo.toml  Dockerfile
data_parser/: Cargo.toml
data_parser/src/: main.rs
data_parser/src/keywords/: Sepsis_cases.rs  activites_mannheim.rs  bpi2012.rs  bpi2017.rs  bpi2018.rs  hospitallog.rs  mod.rs  road_traffic.rs
data_work/BPI Challenge 2018/: BPi Challenge 2018.csv
data_work/Hospital_log/: Hospital_log.csv
data_work/Sepsis Cases - Event Log/: Sepsis Cases - Event Log.csv
evaluation/: abstract_timestamps.py  compute.py  constants.py  csv2auto.py  filtering.py  main.py  measurement.py  priv_metrik.py  re_ident.py  result_printer.py  test.py  visualize.py
evaluation/results_filtering/: Sepsis_Cases-Event_Log.csv
evaluation/results_filtering/Sepsis_Cases-Event_Log/: Sepsis_Cases-Event_LogZ10PT3600S.csv  Sepsis_Cases-Event_LogZ1PT3600S.csv  Sepsis_Cases-Event_LogZ20PT3600S.csv  Sepsis_Cases-Event_LogZ30PT3600S.csv  Sepsis_Cases-Event_LogZ40PT3600S.csv  Sepsis_Cases-Event_LogZ50PT3600S.csv  Sepsis_Cases-Event_LogZ60PT3600S.csv  Sepsis_Cases-Event_LogZ70PT3600S.csv  Sepsis_Cases-Event_LogZ80PT3600S.csv  Sepsis_Cases-Event_LogZ90PT3600S.csv
src/z_filter/: lru_entry.rs  lru_manager.rs  mod.rs  z_anon.rs
z_filtering/: Cargo.toml
z_filtering/results_filtering/Sepsis_Cases-Event_Log/: Sepsis_Cases-Event_LogZ2PT43200S.csv
z_filtering/src/: main.rs
z_filtering/src/z_filter/: attribute.rs  config.rs  lru_entry.rs  lru_manager.rs  z_anon.rs
(+1 files in other folders)
